--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/REC-html40/loose.dtd">
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;
@@ -49,7 +49,7 @@ function MM_swapImage() { //v3.0
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -183,7 +183,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               <tbody>
                                   <td style=" height: 279px;" id="NEWS2">
                                         <p align="center"> <iframe
-src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Friends-of-Hart-Park%2F171859949545623&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=427"
+src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Friends-of-Hart-Park%2F171859949545623&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=427"
                                             style="border:medium none;
                                             overflow:hidden;
                                             width:292px; height:448px;"
@@ -261,15 +261,23 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                      <a href= "Event_Pages/silents.html">
-                                      <img src="Event_Pages/silents/silents2018/2018silents.jpg"/>
+                                      <a target="_blank" href= "https://www.hdmmrc.com/hdmmrc/events.html">
+                                      <img src="Event_Pages/trains2018.jpg"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
-                                      title="Movies in the Park" rel="lightbox[blackpanther]">
-                                      <img src="Event_Pages/movies2018/BlackPanther-sm.png"/>
+                                      <a href= "Event_Pages/Yoga2018.jpg" 
+                                      title="Yoga in the Park" rel="lightbox[Yoga]">
+                                      <img src="Event_Pages/Yoga2018-sm.jpg"/>
+                                      </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+                                      <a target="_blank" href="https://www.santaclaritaartists.org/2018-art-classic-main-page.html">
+                                      <img src="Event_Pages/SCAA2018.jpg"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -282,32 +290,22 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   <tbody>
                                     <tr>
                                       <td id="EventDate">
-                                        Saturday, Aug. 11<sup>th</sup>
-                                        6pm</td>
+                                        Saturday &amp; Sunday, Sep. 15<sup>th</sup>&ndash;16<sup>th</sup>
+                                        10am&ndash;4pm</td>
                                       <td id="Event">
-                                      <a href= "Event_Pages/silents.html">
-                                      &ldquo;Silents Under the Stars&rdquo;
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Friday
-                                        Aug. 17<sup>th</sup>
-                                        &mdash; at Dusk</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]">
-                                      Movie in the Park:  Black Panther
-                                      </a>
+                                      <a target="_blank" href="https://www.hdmmrc.com/hdmmrc/events.html">
+                                      High Desert Modular Model Train Show
+                                      <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
-                                        Saturday &amp; Sunday, Sep. 15<sup>th</sup>&ndash;16<sup>th</sup>
-                                        10am&ndash;4pm</td>
+                                        Sunday, Sep. 16<sup>th</sup>
+                                        8am&ndash;noon</td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://www.hdmmrc.com/events.php">
-                                      High Desert Modular Model Train Show
+                                      <a href= "Event_Pages/Yoga2018.jpg" 
+                                      title="Yoga in the Park" rel="lightbox[Yoga]">
+                                      Yoga in the Park
                                       <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
                                     </tr>
@@ -316,7 +314,7 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         Saturday &amp; Sunday, Sep. 29<sup>th</sup>&ndash;30<sup>th</sup>
                                         </td>
                                       <td id="Event">
-                                      <a target="_blank" href="https://www.santaclaritaartists.org/">
+                                      <a target="_blank" href="https://www.santaclaritaartists.org/2018-art-classic-main-page.html">
                                       SCV Artists Association Arts Classic
                                       <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
