Updated Silents page to thank all as a done-deal.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -119,17 +119,17 @@ function MM_swapImage() { //v3.0
 										<font size="5">The Friends Of Hart Park 
 										<br>
 										and the<br>
-&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
+&nbsp;William S. Hart Park &amp; Museum <br><br>
+<h1 align="center" class="silents">THANK YOU</h1><br>
+<h2 align="center" class="silents">for joining us at 2018's:</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-											<p align="center">
-											Join us on
-											<h3 align="center">
-											Saturday, August 11<sup>th</sup>, 
-											2018 at 6pm</h3></span></TD>
+											<h2 align="center" class="silents">
+											on Saturday, August 11<sup>th</sup>
+											</h2></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
                                             <!--
@@ -163,13 +163,20 @@ function MM_swapImage() { //v3.0
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 											<font size="4">Tickets are non-Refundable</font></span></span></p>
                                             -->
-                                            <h1 align="center" class="silents">
-                                            Sold Out!<br>
-                                            Sold Out!<br>
-                                            Sold Out!<br>
-                                            Sold Out!<br>
-                                            Sold Out!<br>
-                                            </h1>
+                                            <h2 align="center" class="silents">
+                                            Click 
+                                            <a target="_blank" 
+                                             href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
+                                            HERE</a>
+                                            to see photos from the event"
+                                            </h2>
+                                            <p align=center>
+                                            <a target="_blank" 
+                                             href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
+                                            <img align="center" 
+                                            src="silents/silents2018/silents2018-sm.jpg"/>
+                                            </a>
+                                            </p> 
 											</TD>
 											</TR>
 											<TR>
@@ -177,8 +184,35 @@ function MM_swapImage() { //v3.0
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
+<h1 align="center" class="silents">Silents Under the Stars 2018</h1><br>
+<h2 align="center" class="silents">
+<i>by Bill Blowers</i>
+</h2>
+<p class="silents">
+It's kind of ironic that we call it &ldquo;Silents Under the Stars&rdquo; Saturday evening, August 11, was anything but silent. The hall and patio at Hart Park were filled with the delightful sounds of people having a great time, greeting old friends, listening to the terrific country western music of the Grateful Dudes Cowboy Band, enjoying a cold drink, and especially the amazing sound of Ray Lowe at the keyboard as he took us back to a simpler time and place. Sherron Blowers and her small but very talented committee came through once again, providing us with an evening that all agreed was the best &ldquo;Silents&rdquo; ever. Why even Mother nature chipped in! She bestowed on the park a mild evening and gentle breeze, a much welcomed and appreciated break from the hot sticky weather.
+</p><p class="silents">
+The silent auction hit a new high with 95 items available for bid, including an American flag made from wine barrels, a patriotic basket from Representative Steve Knight, a one-of-a-kind collectible book of western art, numerous original paintings, unique women's western clothing, gift cards to many local eateries, and many more delightful items too numerous to mention.
+
+</p><p class="silents">
+This was Sherron's tenth year as chairperson for the event. Through her leadership and hard work, &ldquo;Silents&rdquo; has grown to become a major fund raiser for FOHP and from the comments heard Saturday evening, has become a highlight of the year at Hart Park. &ldquo;Best Silents ever&rdquo;, &ldquo;What a great time&rdquo;, &ldquo;Can't wait till next year&rdquo;, &ldquo;That band was terrific&rdquo; &mdash; a small sampling of the remarks coming from one and all.
+
+</p><p class="silents">
+Attending where several members of the City Council, representatives of Supervisor Kathryn Barger's office and many guests who return year after year as well as new guests that we look forward to welcoming back next year.
+
+</p><p class="silents">
+In the evenings silent movie, Toll Gate, Bill Hart portrayed Black Deering, the leader of a notorious gang of bandits. The film was co-written by Bill Hart with help from his sister, Mary Ellen Hart. In addition to the traditional silent film, attendees were treated to two short video presentations. Supervisor Kathryn Barger spoke through the magic of DVDs, thanking everyone for attending and for the ongoing tradition of Hart Park in its quest to preserve the western heritage roots of the Santa Clarita Valley. A second short video presentation was prepared by Phil Scorza, in coordination with SCVTV's Leon Worden, that linked together the histories of William S. Hart and the Newhall area. 
+
+</p><p class="silents">
+Many thanks to all the volunteers that made the evening possible, and to the staff and management of Hart Park for your efforts on behalf of FOHP.
+
+                                                        </td>
+                                                    </tr>
+													<tr>
+														<td colspan="2">
 											<p>
-											<B class="EVNTC">Just Announced!</B>
+                                            <hr>
+                                            <hr>
+											<B class="EVNTC">The Event</B>
 <p>
 <h1 align="center" class="silents">Silents Under the Stars:</h1><br>
 <div>
@@ -186,8 +220,8 @@ function MM_swapImage() { //v3.0
 <h2 align="center" class="silents"><br><br>Featuring <em>William S. Hart</em> starring in his own production, 
 with a story co-written by his sister Mary Ellen Hart, also starring his favorite pinto 
 pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>.&rdquo;</h2><br><br>
-<h2 align="center" class="silents">Catch the scene where Bill &amp; Fritz nearly died during the production!</h2><br><br>
-<h2 align="center" class="silents">As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
+<h2 align="center" class="silents">Did you catch the scene where Bill &amp; Fritz nearly died during the production?</h2><br><br>
+<h2 align="center" class="silents">As always, our movie was accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
 </h2>
 </div>
 <p align="center">
@@ -201,7 +235,7 @@ pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>.&rdquo;</h2><br><br>
 										<span class="Apple-style-span">
 										<span style="letter-spacing: normal">
 <h2 class="silents">
-This year we're proud to showcase the western/bluegrass sounds of
+This year we were proud to showcase the western/bluegrass sounds of
 </h2>
 <h1 class="silents" align="center">
 The Grateful Dudes Cowboy Band
@@ -330,7 +364,7 @@ The Grateful Dudes Cowboy Band
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
                                         <img alt="SCV In The Movies" border="0" src="images/scvinthemovies.jpg">
 											<h2 align=center> 
-										Our event will be hosted by 
+										Our event was hosted by 
                                         &ldquo;<a target="_blank" href="http://scvinthemovies.com">SCV 
                                         In The Movies</a>&rdquo; hosts E.J. Stephens and Bill West</h2>
 											</TD>
