Updated events, including Goin' Country.

--- a/index.htm
+++ b/index.htm
@@ -261,26 +261,25 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                      <a target="_blank" href= "https://www.hdmmrc.com/hdmmrc/events.html">
-                                      <img src="Event_Pages/trains2018.jpg"/>
-                                      </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                      <a href= "Event_Pages/Yoga2018.jpg" 
-                                      title="Yoga in the Park" rel="lightbox[Yoga]">
-                                      <img src="Event_Pages/Yoga2018-sm.jpg"/>
+                                      <a href= "Event_Pages/powwow.html">
+                                      <img src="Event_Pages/powwow2018.jpg"/>
                                       </a>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-                                      <a target="_blank" href="https://www.santaclaritaartists.org/2018-art-classic-main-page.html">
-                                      <img src="Event_Pages/SCAA2018.jpg"/>
+                                      <a href= "Event_Pages/powwow.html">
+                                      <a href= "Event_Pages/OctGoinCountry2018-lg.png" 
+                                      title="Goin' Country at the Hart" rel="lightbox[goin]">
+                                      <img src="Event_Pages/OctGoinCountry2018-sm.jpg"/>
                                       </a>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
+                                      <a target="_blank" href="https://www.bowwowsandmeows.org/">
+                                      <img src="Event_Pages/bowwows2018.jpg"/>
+                                      </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2018 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -290,43 +289,22 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   <tbody>
                                     <tr>
                                       <td id="EventDate">
-                                        Saturday &amp; Sunday, Sep. 15<sup>th</sup>&ndash;16<sup>th</sup>
-                                        10am&ndash;4pm</td>
-                                      <td id="Event">
-                                      <a target="_blank" href="https://www.hdmmrc.com/hdmmrc/events.html">
-                                      High Desert Modular Model Train Show
-                                      <span><img src="images/ExternalLink.png"/></a></span>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Sunday, Sep. 16<sup>th</sup>
-                                        8am&ndash;noon</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/Yoga2018.jpg" 
-                                      title="Yoga in the Park" rel="lightbox[Yoga]">
-                                      Yoga in the Park
-                                      <span><img src="images/ExternalLink.png"/></a></span>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, Sep. 29<sup>th</sup>&ndash;30<sup>th</sup>
-                                        </td>
-                                      <td id="Event">
-                                      <a target="_blank" href="https://www.santaclaritaartists.org/2018-art-classic-main-page.html">
-                                      SCV Artists Association Arts Classic
-                                      <span><img src="images/ExternalLink.png"/></a></span>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
                                         Saturday &amp; Sunday, Oct. 6<sup>th</sup>&ndash;7<sup>th</sup>
                                         10am&ndash;7pm</td>
                                       <td id="Event">
                                       Hart of the West 
                                       <a href="Event_Pages/powwow.html">Native American
                                       &ldquo;Pow Wow&rdquo; and Craft Fair</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Friday, Oct. 12<sup>th</sup>
+                                        7pm&ndash;10pm</td>
+                                      <td id="Event">
+                                      <a href= "Event_Pages/OctGoinCountry2018-lg.png" 
+                                      title="Goin Country at the Hart" rel="lightbox[goin]">
+                                      Goin' Country at the Hart</a> live  music and dance!
                                       </td>
                                     </tr>
                                     <tr>
