Last two updates, making Pow Wow past, and beginnings of Holidays 2018.

--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -171,7 +171,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               5px" align="center"> <h2 align="center"> 
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
-are proud to present the<br></h2></p>
+thank you for coming to the<br></h2></p>
                             <h2 align="center">25<sup>th</sup> Annual</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
