--- a/index.html
+++ b/index.html
@@ -200,48 +200,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-                                <tr>
-                                <td>
-<h3 align="center"?>
-Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
-</h3>
-<a href= "images/2017yearInReview/FOHP-2017-02.jpg" 
- title="Half Pint in Hart Hall!" rel="lightbox[2017]">
-<img src="images/2017yearInReview/FOHP-2017-01.jpg"/></a>
-<a href= "images/2017yearInReview/FOHP-2017-03.jpg" 
- title="Cowboy Festival in Hart Mansion:  Wyatt Earp historians Garner Palenske &amp; Nicholas Cataldo and musician Dave Stamey" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-04.jpg" 
- title="Pacific Islander Festival" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-05.jpg" 
- title="Silents Under the Stars 2017" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-06.jpg" 
- title="Summer Movies in the Park" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-07.jpg" 
- title="Friends of Hart Park Annual Volunteer Dinner, featuring Joanne Grosch" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-08.jpg" 
- title="Hart of the West Pow Wow" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-09.jpg" 
- title="Bow Wows &amp; Meows Pet Fair" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-10.jpg" 
- title="Thanks to Katie Berndt for her Girl Scout Gold Award Project Bench" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-11.jpg" 
- title="Thanks to Green Thumb Nursery for the piggy treats!" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-12.jpg" 
- title="Cowboys &amp; Carols&mdash;Bill Hart's Birthday celebration" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-13.jpg" 
- title="Sorry to say so long: Lisa Jaserie, Lina Schultz, Norman" rel="lightbox[2017]"/>
-<a href= "images/2017yearInReview/FOHP-2017-14.jpg" 
- title="New Additions to our Friends:  Tortoises, Alpacas, and two new board members: John Grannis & Tim Murphy" rel="lightbox[2017]"/>
-                                </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -263,22 +221,16 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                           <td align="center" valign="top" width="557">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-                                      <a href= "Event_Pages/powwow.html">
-                                      <img src="Event_Pages/powwow2018.jpg"/>
+                                      <a href= "Event_Pages/CowboysCarols2018-lg.png" 
+                                      title="Cowboys &amp; Carols" rel="lightbox[cowboyscarols]">
+                                      <img src="Event_Pages/CowboysCarols2018-sm.jpg"/>
                                       </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-                                      <a href= "Event_Pages/powwow.html">
-                                      <a href= "Event_Pages/OctGoinCountry2018-lg.png" 
-                                      title="Goin' Country at the Hart" rel="lightbox[goin]">
-                                      <img src="Event_Pages/OctGoinCountry2018-sm.jpg"/>
-                                      </a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-                                      <a target="_blank" href="https://www.bowwowsandmeows.org/">
-                                      <img src="Event_Pages/bowwows2018.jpg"/>
+                                      <a href= "Event_Pages/HartHolidayBoutique2018-lg.png" 
+                                      title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
+                                      <img src="Event_Pages/HartHolidayBoutique2018-sm.jpg"/>
                                       </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2018 Calendar of Events</h2>
@@ -288,49 +240,11 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, Oct. 6<sup>th</sup>&ndash;7<sup>th</sup>
-                                        10am&ndash;7pm</td>
-                                      <td id="Event">
-                                      Hart of the West 
-                                      <a href="Event_Pages/powwow.html">Native American
-                                      &ldquo;Pow Wow&rdquo; and Craft Fair</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Friday, Oct. 12<sup>th</sup>
-                                        7pm&ndash;10pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/OctGoinCountry2018-lg.png" 
-                                      title="Goin Country at the Hart" rel="lightbox[goin]">
-                                      Goin' Country at the Hart</a> live  music and dance!
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Sunday, Oct. 14<sup>th</sup>
-                                        11am&ndash;4pm</td>
-                                      <td id="Event">
-                                      <a target="_blank" href="https://www.bowwowsandmeows.org/">
-                                      &ldquo;Bow Wows &amp; Meows&rdquo; Pet Fair
-                                      <span><img src="images/ExternalLink.png"/></a></span>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday, Nov. 3<sup>rd</sup>
-                                        1pm&ndash;4pm</td>
-                                      <td id="Event">
-                                      25<sup>th</sup> annual 
-                                      <a target="_blank" href="http://www.scvrs.homestead.com/roseshow.html">
-                                      SCV Rose Society Rose Show
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
                                       7pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/CowboysCarols2018-lg.png" 
+                                      title="Cowboys &amp; Carols" rel="lightbox[cowboyscarols]">
                                       Cowboys &amp; Carols
                                       </a>
                                       </td>
@@ -341,7 +255,10 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         10am&ndash;4pm
                                         </td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/HartHolidayBoutique2018-lg.png" 
+                                      title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
                                       Hart Holiday Boutique
+                                      </a>
                                       </td>
                                     </tr>
 <!--
