Added photos from 2018 powwow, but no time to add them to website. Added flyer for Hart Holiday Boutique.

--- a/index.htm
+++ b/index.htm
@@ -228,7 +228,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-                                      <a href= "Event_Pages/HartHolidayBoutique2018-lg.png" 
+                                      <a href= "Event_Pages/HartHolidayBoutique2018flyer.jpg" 
                                       title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
                                       <img src="Event_Pages/HartHolidayBoutique2018-sm.jpg"/>
                                       </a>
@@ -255,7 +255,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                         10am&ndash;4pm
                                         </td>
                                       <td id="Event">
-                                      <a href= "Event_Pages/HartHolidayBoutique2018-lg.png" 
+                                      <a href= "Event_Pages/HartHolidayBoutique2018flyer.jpg" 
                                       title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
                                       Hart Holiday Boutique
                                       </a>
