--- a/index.html
+++ b/index.html
@@ -241,12 +241,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
-                                      7pm</td>
+                                      6:30pm&ndash;8:30pm</td>
                                       <td id="Event">
                                       <a href= "Event_Pages/CowboysCarols2018-lg.png" 
                                       title="Cowboys &amp; Carols" rel="lightbox[cowboyscarols]">
-                                      Cowboys &amp; Carols
-                                      </a>
+                                      Cowboys &amp; Carols</a> gather in Hart Hall
                                       </td>
                                     </tr>
                                     <tr>
@@ -257,8 +256,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                       <td id="Event">
                                       <a href= "Event_Pages/HartHolidayBoutique2018flyer.jpg" 
                                       title="Hart Holiday Boutiuque" rel="lightbox[hartholiday]">
-                                      Hart Holiday Boutique
-                                      </a>
+                                      Hart Holiday Boutique</a> in Hart Hall
                                       </td>
                                     </tr>
 <!--
